--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
             <input type="search" placeholder="search" />
           </div>
           <div class="logos">
-            <i class="fa-regular fa-bell"></i>
-            <i class="fa-regular fa-heart"></i>
-            <span><i class="fa-solid fa-bag-shopping"></i></span>
+            <a href=""><i class="fa-regular fa-bell"></i></a>
+            <a href=""><i class="fa-regular fa-heart"></i></a>
+            <a href=""><i class="fa-solid fa-bag-shopping"><sup>0</sup></i></a>
           </div>
           <a href="" class="LF fonts">Login</a>
           <a href="" class="LF fonts">Register</a>
@@ -406,23 +406,90 @@
         </div>
       </div>
       <div class="container">
-        <div class="box"><a href=""><img src="/Image/zando-3.png" alt=""></a></div>
-        <div class="box"><a href=""><img src="/Image/1011.png" alt=""></a></div>
-        <div class="box"><a href=""><img src="/Image/Gatoni.png" alt=""></a></div>
-        <div class="box"><a href=""><img src="/Image/ROUTINE-LOGO.jpg" alt=""></a></div>
-        <div class="box"><a href=""><img src="/Image/361.jpg" alt=""></a></div>
+        <div class="box"><a href=""><img src="Image/zando-3.png" alt=""></a></div>
+        <div class="box"><a href=""><img src="Image/1011.png" alt=""></a></div>
+        <div class="box"><a href=""><img src="Image/Gatoni.png" alt=""></a></div>
+        <div class="box"><a href=""><img src="Image/ROUTINE-LOGO.jpg" alt=""></a></div>
+        <div class="box"><a href=""><img src="Image/361.jpg" alt=""></a></div>
       </div>
       <div class="space"></div>
       <div class="container">
-        <div class="box1"><a href=""><img src="/Image/Screenshot 2024-12-07 003207.png" alt=""></a></div>
-        <div class="box1"><a href=""><img src="/Image/Screenshot 2024-12-07 003243.png" alt=""></a></div>
+        <div class="box1"><a href=""><img src="Image/Screenshot 2024-12-07 003207.png" alt=""></a></div>
+        <div class="box1"><a href=""><img src="Image/Screenshot 2024-12-07 003243.png" alt=""></a></div>
         <div class="box1"><a href=""><img src="Image/Screenshot 2024-12-07 003320.png" alt=""></a></div>
       </div>
       <div class="space"></div>
       <div class="container">
-        <div class="box1"><a href=""><img src="/Image/Screenshot 2024-12-07 003207.png" alt=""></a></div>
-        <div class="box1"><a href=""><img src="/Image/Screenshot 2024-12-07 003243.png" alt=""></a></div>
+        <div class="box1"><a href=""><img src="Image/Screenshot 2024-12-07 003207.png" alt=""></a></div>
+        <div class="box1"><a href=""><img src="Image/Screenshot 2024-12-07 003243.png" alt=""></a></div>
         <div class="box1"><a href=""><img src="Image/Screenshot 2024-12-07 003320.png" alt=""></a></div>
+      </div>
+      <div class="space"></div>
+      <div class="sp_bt">
+        <h3 class="fonts textsize40"> New Arrival! </h3>
+        <h5 class="fonts textsize20"> Shop more </h5>
+      </div>
+      <div class="space"></div>
+      <div class="container">
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161645.png" alt=""></a>
+          <div class="pl">
+          <h3> US 55.55$ </h3>
+          <h3><i class="fa-regular fa-heart"></i></h3>
+        </div>
+        <span class="koko"><h3> maxi Dress </h3></span>
+        </div>
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161701.png" alt="">  </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span></div>
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161722.png" alt="">  </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span>
+        </div>
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161753.png" alt="">  </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span>
+        </div>
+      </div>
+      <div class="space"></div>
+      <div class="sp_bt">
+        <h3 class="fonts textsize40"> New Arrival! </h3>
+        <h5 class="fonts textsize20"> Shop more </h5>
+      </div>
+      <div class="space"></div>
+      <div class="container">
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161645.png" alt=""> </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span></div>
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161701.png" alt="">  </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span></div>
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161722.png" alt="">  </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span></div>
+        <div class="box2"><a href=""><img src="Image/Screenshot 2024-12-07 161753.png" alt="">  </a>
+          <div class="pl">
+            <h3> US 55.55$ </h3>
+            <h3><i class="fa-regular fa-heart"></i></h3>
+          </div>
+          <span class="koko"><h3> maxi Dress </h3></span></div>
       </div>
     </main>
   </body>
