--- a/index.html
+++ b/index.html
@@ -492,5 +492,36 @@
           <span class="koko"><h3> maxi Dress </h3></span></div>
       </div>
     </main>
+    <footer>
+     <div class="space"></div>
+      <div class="containeree">
+        <div class="box3"><h3>Zando APP</h3>
+          <img src="Image/QR.jpeg" alt="">
+        </div>
+        <div class="box3"><h3>Loyalty </h3>
+          <p>membership and benefit</p>
+        </div>
+        <div class="box3"><h3>Customer servics</h3>
+        <p>online exchange policy</p>
+        <p>  Privacy policy </p>
+        <p>  FAQs & Guides </p>
+        </div>
+        <div class="box3"><h3>Follow us</h3>
+          <p>Facebook</p>
+          <p>Instagram</p>
+          <p>Tik Tok</p>
+          <p>Telegram</p>
+        </div>
+        <div class="box3"><h3> contact us </h3>
+        <p>info@zondo.com</p>
+        <p> (+855) 081 999 715</p>
+        <p> (+855) 081 999 715 </p>
+        <p> Telegram </p></div>
+        <div class="box3"><h3> We accept </h3>
+        <img src="Image/Screenshot 2024-12-08 005042.png" alt=""></div>
+      </div>
+      <hr>
+      <div class="space"></div>
+    </footer>
   </body>
 </html>
